# 106a_final

./: README.md
locobot_interface/: CMakeLists.txt
mobilemanipulation/: requirements.txt
mobilemanipulation/others/: main_real.py
mobilemanipulation/softlearning/environments/gym/locobot/: real_dual_nav_grasp_envs.py  real_envs.py
mobilemanipulation/softlearning/environments/gym/locobot/grasp_models/alpha10mean_beta10std_6Q_rfe/: logits_model_0.index  logits_model_1.index  logits_model_2.index  logits_model_3.index  logits_model_4.index  logits_model_5.index
mobilemanipulation/softlearning/environments/gym/locobot/grasp_models/alpha10mean_beta10std_stat_rand_color/: logits_model_0.index  logits_model_1.index  logits_model_2.index  logits_model_3.index  logits_model_4.index  logits_model_5.index
mobilemanipulation/softlearning/environments/gym/locobot/grasp_models/sock_2000/: logits_model_0.index  logits_model_1.index  logits_model_2.index  logits_model_3.index  logits_model_4.index  logits_model_5.index
mobilemanipulation/softlearning/environments/gym/locobot/grasp_models/sock_3000/: logits_model_0.index  logits_model_1.index  logits_model_2.index  logits_model_3.index  logits_model_4.index  logits_model_5.index
